--- a/src/app/components/arcgis/map/map.component.html
+++ b/src/app/components/arcgis/map/map.component.html
@@ -1,11 +1,19 @@
 <div class="map-container">
-  <div #viewDiv id="viewDiv" style="width:100%;height:100vh;"></div>
+  <div #viewDiv id="viewDiv" class="map" style="width:100%;height:100vh;"></div>
 
-  @if (showSliceWidget && view && sliceConfig) {
+  @if (showSliceWidget && sceneView && sliceConfig) {
     <app-slice
-      [view]="view!"
+      [view]="sceneView!"
       [config]="sliceConfig"
       class="slice-widget-overlay">
     </app-slice>
+  }
+
+  @if (showLineOfSightWidget && sceneView && lineOfSightConfig) {
+    <app-line-of-sight
+      [view]="sceneView!"
+      [config]="lineOfSightConfig"
+      class="line-of-sight-widget-overlay">
+    </app-line-of-sight>
   }
 </div>
