--- a/src/app/components/arcgis/home/home.component.scss
+++ b/src/app/components/arcgis/home/home.component.scss
@@ -1,9 +1,12 @@
 .home-widget-overlay {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 200px;
+  left: 15px;
   z-index: 100;
   width: 48px;
   height: 48px;
   pointer-events: auto;
+  display: flex;
+  align-items: center;
+  justify-content: left;
 }
